# data-cleaning-bench

./: README.md  bench.R  fake_airquality.R
r_datatable/: r_datatable.R
r_tidyverse/: r_tidyverse.R
rust_limpieza/: Cargo.toml
rust_limpieza/src/: main.rs
