[package]
name = "rust_limpieza"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.38.1", features = ["lazy", "temporal", "dtype-datetime", "streaming", "dtype-date", "dtype-full"] }
